--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,9 @@
 }
 
 body {
-	background: #f5f5f5;
-	color: #444;
+	background: linear-gradient(to right, #414345, #232526);
+	color: #f7f9f4;
+
 	margin: 20px;
 }
 
@@ -22,9 +23,17 @@ body {
 
 .table th {
 	background-color: #444;
-	color: #fff;
+	color: #f7f9f4;
+}
+
+.table tr {
+	background-color: #f7f9f4;
 }
 
 .table tr:nth-child(even) {
-	background-color: #f2f2f2;
+	background-color: #EDE5D8;
+}
+
+.btn {
+	margin-right: 10px;
 }
