--- a/src/style.css
+++ b/src/style.css
@@ -37,3 +37,13 @@ body {
 .btn {
 	margin-right: 10px;
 }
+
+.filtro-label {
+	color: white;
+	margin-right: 10px;
+}
+
+.filtro-input {
+	background-color: #fff;
+	color: #444;
+}
